# tstring-structured-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: wait_for_crate.py
.github/workflows/: changelog.yml  ci.yml  docs.yaml  json-tstring-ci.yml  llms-txt.yaml  publish-python.yml  publish-rust.yml  release-check.yml  release-draft.yml  release-notify.yml  toml-tstring-ci.yml  yaml-tstring-ci.yml
conformance/: README.md
conformance/json/: PROVENANCE.md  profiles.toml
conformance/json/cases/: rfc-8259-no-leading-zero-number.json  rfc-8259-no-trailing-comma.json  rfc-8259-section-13-values.json  rfc-8259-section-7-surrogate-pair.expected.json
conformance/json/profiles/rfc8259/: spec-map.toml
conformance/toml/: README.md  profiles.toml
conformance/toml/cases/: repo-inline-table-and-arrays.expected.json  repo-inline-table-and-arrays.toml
conformance/toml/profiles/1.0/: spec-map.toml
conformance/toml/profiles/1.1/: spec-map.toml
conformance/yaml/: README.md  profiles.toml
conformance/yaml/profiles/1.2.2/: spec-map.toml
docs/: architecture.md  index.md  llms-full.txt  llms.txt
docs/development/: conformance-vendor-sync.md  setup.md
docs/getting-started/: installation.md  quick-start.md
docs/reference/: api.md  backend-support-matrix.md  spec-conformance-status.md
docs/usage/: editor-integration.md  error-handling.md  json.md  profiles.md  toml.md  yaml.md
examples/: README.md  _display.py  json_api_payload.py  json_validation_errors.py  toml_app_config.py  yaml_docker_compose.py  yaml_release_manifest.py
json-tstring/: README.md  pyproject.toml
json-tstring/src/json_tstring/: __init__.py  _runtime.py
json-tstring/tests/: test_json_conformance.py  test_json_pep750_binding_regressions.py  test_json_single_pipeline.py  test_json_tstring.py
overrides/: main.html
rust/: Cargo.toml
rust/backend-e2e-tests/: Cargo.toml
rust/backend-e2e-tests/src/: lib.rs
rust/backend-e2e-tests/tests/: backend_api.rs
rust/json-tstring-rs/: Cargo.toml  README.md
rust/json-tstring-rs/src/: lib.rs
rust/json-tstring-rs/tests/: conformance.rs  parser.rs
rust/python-bindings/: Cargo.toml  README.md  pyproject.toml
rust/python-bindings/python/tstring_bindings/: __init__.py  __init__.pyi  _profiles.py  _types.py  tstring_bindings.pyi
rust/python-bindings/src/: lib.rs
rust/toml-tstring-rs/: Cargo.toml  README.md
rust/toml-tstring-rs/src/: lib.rs
rust/toml-tstring-rs/tests/: conformance.rs  parser.rs
rust/tstring-core-rs/: Cargo.toml  README.md
rust/tstring-core-rs/src/: lib.rs
rust/tstring-pyo3-bindings/: Cargo.toml
rust/tstring-pyo3-bindings/benches/: render_paths.rs
rust/tstring-pyo3-bindings/src/: json.rs  lib.rs  toml.rs  yaml.rs
rust/yaml-pyo3-tests/: Cargo.toml
rust/yaml-pyo3-tests/src/: lib.rs
rust/yaml-pyo3-tests/tests/: renderer_layout.rs
rust/yaml-tstring-rs/: Cargo.toml  README.md
rust/yaml-tstring-rs/src/: lib.rs
rust/yaml-tstring-rs/test-support/: renderer_layout.rs
rust/yaml-tstring-rs/tests/: conformance.rs  normalized.rs  parser.rs
scripts/: build_llms_txt.py  compose_release_notes.py  generate_changelog.sh  manage_versions.py  prek_backend_checks.sh  prek_examples_checks.sh  sync_conformance_vendor.py  update_docs_version.py  validate_release_notes.py
toml-tstring/: README.md  pyproject.toml
toml-tstring/src/toml_tstring/: __init__.py  _runtime.py  _slots.py
toml-tstring/tests/: test_profiles.py  test_toml_conformance.py  test_toml_pep750_binding_regressions.py  test_toml_single_pipeline.py  test_toml_tstring.py
tstring-core/: README.md  pyproject.toml
tstring-core/src/tstring_core/: __init__.py  _conformance.py  _diagnostics.py  _errors.py  _nodes.py  _render.py  _slots.py  _spans.py  _tokens.py  _types.py  _values.py
yaml-tstring/: README.md  pyproject.toml
yaml-tstring/src/yaml_tstring/: __init__.py  _errors.py  _runtime.py
yaml-tstring/tests/: test_yaml_conformance.py  test_yaml_pep750_binding_regressions.py  test_yaml_single_pipeline.py  test_yaml_tstring.py
