[project]
name = "tstring-structured-data-workspace"
version = "0.1.0"
description = "Workspace for parser-first JSON, TOML, and YAML PEP 750 t-string backends"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "json-tstring>=0.1.0",
    "toml-tstring>=0.1.0",
    "tstring-core>=0.1.0",
    "yaml-tstring>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "inline-snapshot>=0.32.5",
    "json-tstring>=0.1.0",
    "maturin>=1.8.0",
    "pytest>=8.4.0",
    "ruff>=0.11.0",
    "toml-tstring>=0.1.0",
    "tstring-core>=0.1.0",
    "ty>=0.0.23",
    "yaml-tstring>=0.1.0",
]
docs = [
    "zensical>=0.0.15",
]

[tool.uv.workspace]
members = [
    "json-tstring",
    "rust/python-bindings",
    "toml-tstring",
    "tstring-core",
    "yaml-tstring",
]

[tool.uv]
package = false

[tool.uv.sources]
json-tstring = { workspace = true }
toml-tstring = { workspace = true }
tstring-bindings = { workspace = true }
tstring-core = { workspace = true }
yaml-tstring = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "json-tstring/tests",
    "toml-tstring/tests",
    "yaml-tstring/tests",
]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I"]
