[package]
name = "tstring-bindings"
description = "Python extension module for t-string structured data backends"
edition.workspace = true
exclude = [".DS_Store", "**/.DS_Store", "**/__pycache__"]
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "tstring_bindings"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, features = ["abi3-py314"] }
pythonize = { workspace = true }
saphyr = { workspace = true }
serde_json = { workspace = true }
tstring-json = { version = "0.1.0", path = "../json-tstring-rs" }
tstring-pyo3-bindings = { version = "0.1.0", path = "../tstring-pyo3-bindings" }
tstring-syntax = { version = "0.1.0", path = "../tstring-core-rs" }
toml = { workspace = true }
tstring-toml = { version = "0.1.0", path = "../toml-tstring-rs" }
tstring-yaml = { version = "0.1.0", path = "../yaml-tstring-rs" }
